修改了照片框

--- a/index.html
+++ b/index.html
@@ -667,8 +667,7 @@
         ctx.font = '500 60px Times New Roman'
         ctx.fillStyle = '#eebb66'
         ctx.textAlign = 'center'
-        ctx.fillText('By', 256, 230)
-        ctx.fillText('Youhun', 256, 300)
+        ctx.fillText('Photo', 256, 300)
 
         const tex = new THREE.CanvasTexture(canvas)
         tex.colorSpace = THREE.SRGBColorSpace
